ginna_pod.yaml
# COMMANDS

# kubectl apply -f ginna_pod.yaml

# kubectl get pods
# kubectl get pods -o wide/json/yaml
# kubectl get pods --show-labels
# kubectl get pods --selector="application=ginna,environment=development"

# kubectl delete pods/ginna
# kubectl delete -f ginna_pod.yaml

# kubectl port-forward ginna 2312:2312
# kubectl logs ginna (--previous)
# kubectl logs ginna -f (streaming)

apiVersion: v1
kind: Pod
metadata:
  name: ginnapod
  labels:
    application: ginna
    version: v1.0.0
    environment: development
  annotations:
    url: "ginna.caashiere"
spec:
  containers:
  - name: ginna
    image: caashiere/ginna:latest
    ports:
      - containerPort: 2312
        name: portginna
        protocol: TCP
    resources:
      requests:
        cpu: "500m" # 0.5 CPU
        memory: "128Mi" # 128 MB
      limits:
        cpu: "1000m" # 1.0 CPU
        memory: "256Mi" # 256 MB
    readinessProbe:
      httpGet:
        path: /ready
        port: 2312
      initialDelaySeconds: 0
      failureThreshold: 3
      successThreshold: 1
      periodSeconds: 2
    livenessProbe:
      httpGet:
        path: /health
        port: 2312
      initialDelaySeconds: 5
      failureThreshold: 3
      timeoutSeconds: 1
      periodSeconds: 10
