ginna_service.yaml
# COMMANDS

# kubectl apply -f ginna_service.yaml

# kubectl get services
# kubectl get services -o wide/json/yaml
# kubectl get endpoints -o wide/json/yaml

# kubectl get services --watch
# kubectl get endpoints --watch
# kubectl get services ginnaservice --watch
# kubectl get endpoints ginnaservice --watch

apiVersion: v1
kind: Service
metadata:
  name: ginnaservice
  labels:
    application: ginna
spec:
  selector:
    application: ginna
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 2312
      targetPort: 2312
